[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resourses/Robot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=3]
[ext_resource path="res://Textures/DungenTileset.tres" type="TileSet" id=4]
[ext_resource path="res://Resourses/Place Blocks UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resourses/EvilRobot.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sound/ambient_music.ogg" type="AudioStream" id=7]
[ext_resource path="res://Resourses/GridSFX.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.921569, 0.909804, 0.235294, 1 )

[node name="Level 6" type="Node2D"]
pause_mode = 1
scale = Vector2( 2, 2 )
script = ExtResource( 3 )
avalibe_CCW_blocks = 1
avalibe_CW_blocks = 3
avalibe_REPLICATE_blocks = 1

[node name="FloorMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 15, 131072, 458756, 0, 0, 458757, 0, 0, 458760, 0, 0, 458761, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 15, 131072, 524292, 15, 196608, 524293, 0, 0, 524296, 15, 65536, 524297, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 15, 131072, 589828, 0, 0, 589829, 15, 65536, 589832, 0, 0, 589833, 15, 196608, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 655364, 15, 196608, 655365, 0, 0, 655368, 15, 65536, 655369, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 15, 65536, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 15, 196608, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 786436, 15, 196608, 786437, 0, 0, 786440, 15, 65536, 786441, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 851972, 0, 0, 851973, 0, 0, 851976, 0, 0, 851977, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0 )

[node name="WallMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 14, 0, 1, 14, 0, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 11, 14, 0, 12, 14, 0, 13, 14, 0, 14, 14, 0, 15, 14, 0, 16, 14, 0, 17, 14, 0, 18, 14, 0, 19, 14, 0, 20, 14, 0, 21, 14, 0, 22, 14, 0, 23, 14, 0, 24, 14, 0, 65536, 14, 0, 65537, 14, 0, 65538, 14, 0, 65539, 14, 0, 65540, 14, 0, 65541, 14, 0, 65542, 14, 0, 65543, 14, 0, 65544, 14, 0, 65545, 14, 0, 65546, 14, 0, 65547, 14, 0, 65548, 14, 0, 65549, 14, 0, 65550, 14, 0, 65551, 14, 0, 65552, 14, 0, 65553, 14, 0, 65554, 14, 0, 65555, 14, 0, 65556, 14, 0, 65557, 14, 0, 65558, 14, 0, 65559, 14, 0, 65560, 14, 0, 131072, 14, 0, 131073, 14, 0, 131074, 14, 0, 131075, 14, 0, 131076, 14, 0, 131077, 14, 0, 131078, 14, 0, 131079, 14, 0, 131080, 14, 0, 131081, 14, 0, 131082, 14, 0, 131083, 14, 0, 131084, 14, 0, 131085, 14, 0, 131086, 14, 0, 131087, 14, 0, 131088, 14, 0, 131089, 14, 0, 131090, 14, 0, 131091, 14, 0, 131092, 14, 0, 131093, 14, 0, 131094, 14, 0, 131095, 14, 0, 131096, 14, 0, 196608, 14, 0, 196609, 14, 0, 196610, 14, 0, 196611, 14, 0, 196612, 14, 0, 196613, 14, 0, 196614, 14, 0, 196615, 14, 0, 196616, 14, 0, 196617, 14, 0, 196618, 14, 0, 196619, 14, 0, 196620, 14, 0, 196621, 14, 0, 196622, 14, 0, 196623, 14, 0, 196624, 14, 0, 196625, 14, 0, 196626, 14, 0, 196627, 14, 0, 196628, 14, 0, 196629, 14, 0, 196630, 14, 0, 196631, 14, 0, 196632, 14, 0, 262144, 14, 0, 262145, 14, 0, 262146, 14, 0, 262147, 14, 0, 262148, 14, 0, 262149, 14, 0, 262150, 14, 0, 262151, 14, 0, 262152, 14, 0, 262153, 14, 0, 262154, 14, 0, 262155, 14, 0, 262156, 14, 0, 262157, 14, 0, 262158, 14, 0, 262159, 14, 0, 262160, 14, 0, 262161, 14, 0, 262162, 14, 0, 262163, 14, 0, 262164, 14, 0, 262165, 14, 0, 262166, 14, 0, 262167, 14, 0, 262168, 14, 0, 327680, 14, 0, 327681, 14, 0, 327682, 14, 0, 327683, 14, 0, 327684, 14, 0, 327685, 14, 0, 327686, 14, 0, 327687, 14, 0, 327688, 14, 0, 327689, 14, 0, 327690, 14, 0, 327691, 14, 0, 327692, 14, 0, 327693, 14, 0, 327694, 14, 0, 327695, 14, 0, 327696, 14, 0, 327697, 14, 0, 327698, 14, 0, 327699, 14, 0, 327700, 14, 0, 327701, 14, 0, 327702, 14, 0, 327703, 14, 0, 327704, 14, 0, 393216, 14, 0, 393217, 14, 0, 393218, 14, 0, 393219, 14, 0, 393220, 14, 0, 393221, 14, 0, 393222, 14, 0, 393223, 14, 0, 393224, 14, 0, 393225, 14, 0, 393226, 14, 0, 393227, 14, 0, 393232, 14, 0, 393233, 14, 0, 393234, 14, 0, 393235, 14, 0, 393236, 14, 0, 393237, 14, 0, 393238, 14, 0, 393239, 14, 0, 393240, 14, 0, 458752, 14, 0, 458753, 14, 0, 458754, 14, 0, 458755, 14, 0, 458756, 13, 131072, 458757, 13, 131072, 458758, 14, 0, 458759, 14, 0, 458760, 13, 65536, 458761, 13, 65536, 458762, 14, 0, 458763, 14, 0, 458768, 14, 0, 458769, 14, 0, 458770, 14, 0, 458771, 14, 0, 458772, 14, 0, 458773, 14, 0, 458774, 14, 0, 458775, 14, 0, 458776, 14, 0, 524288, 14, 0, 524289, 14, 0, 524290, 14, 0, 524291, 14, 0, 524292, 12, 0, 524293, 12, 0, 524294, 14, 0, 524295, 14, 0, 524296, 12, 0, 524297, 12, 0, 524298, 14, 0, 524299, 14, 0, 524304, 14, 0, 524305, 14, 0, 524306, 14, 0, 524307, 14, 0, 524308, 14, 0, 524309, 14, 0, 524310, 14, 0, 524311, 14, 0, 524312, 14, 0, 589824, 14, 0, 589825, 14, 0, 589826, 14, 0, 589827, 14, 0, 589828, 12, 0, 589829, 12, 0, 589830, 14, 0, 589831, 14, 0, 589832, 12, 0, 589833, 12, 0, 589834, 14, 0, 589835, 14, 0, 589840, 14, 0, 589841, 14, 0, 589842, 14, 0, 589843, 14, 0, 589844, 14, 0, 589845, 14, 0, 589846, 14, 0, 589847, 14, 0, 589848, 14, 0, 655360, 14, 0, 655361, 14, 0, 655362, 14, 0, 655363, 14, 0, 655364, 12, 0, 655365, 12, 0, 655366, 14, 0, 655367, 14, 0, 655368, 12, 0, 655369, 12, 0, 655370, 14, 0, 655371, 14, 0, 655376, 14, 0, 655377, 14, 0, 655378, 14, 0, 655379, 14, 0, 655380, 14, 0, 655381, 14, 0, 655382, 14, 0, 655383, 14, 0, 655384, 14, 0, 720896, 14, 0, 720897, 14, 0, 720898, 13, 0, 720900, 12, 0, 720901, 12, 0, 720904, 12, 0, 720905, 12, 0, 720912, 14, 0, 720913, 14, 0, 720914, 14, 0, 720915, 14, 0, 720916, 14, 0, 720917, 14, 0, 720918, 14, 0, 720919, 14, 0, 720920, 14, 0, 786432, 14, 0, 786433, 14, 0, 786434, 14, 0, 786435, 14, 0, 786436, 12, 0, 786437, 12, 0, 786438, 14, 0, 786439, 14, 0, 786440, 12, 0, 786441, 12, 0, 786442, 14, 0, 786443, 14, 0, 786448, 14, 0, 786449, 14, 0, 786450, 14, 0, 786451, 14, 0, 786452, 14, 0, 786453, 14, 0, 786454, 14, 0, 786455, 14, 0, 786456, 14, 0, 851968, 14, 0, 851969, 14, 0, 851970, 14, 0, 851971, 14, 0, 851972, 13, 131072, 851973, 13, 131072, 851974, 14, 0, 851975, 14, 0, 851976, 13, 65536, 851977, 13, 65536, 851978, 14, 0, 851979, 14, 0, 851984, 14, 0, 851985, 14, 0, 851986, 14, 0, 851987, 14, 0, 851988, 14, 0, 851989, 14, 0, 851990, 14, 0, 851991, 14, 0, 851992, 14, 0, 917504, 14, 0, 917505, 14, 0, 917506, 14, 0, 917507, 14, 0, 917508, 14, 0, 917509, 14, 0, 917510, 14, 0, 917511, 14, 0, 917512, 14, 0, 917513, 14, 0, 917514, 14, 0, 917515, 14, 0, 917516, 14, 0, 917517, 14, 0, 917518, 14, 0, 917519, 14, 0, 917520, 14, 0, 917521, 14, 0, 917522, 14, 0, 917523, 14, 0, 917524, 14, 0, 917525, 14, 0, 917526, 14, 0, 917527, 14, 0, 917528, 14, 0, 983040, 14, 0, 983041, 14, 0, 983042, 14, 0, 983043, 14, 0, 983044, 14, 0, 983045, 14, 0, 983046, 14, 0, 983047, 14, 0, 983048, 14, 0, 983049, 14, 0, 983050, 14, 0, 983051, 14, 0, 983052, 14, 0, 983053, 14, 0, 983054, 14, 0, 983055, 14, 0, 983056, 14, 0, 983057, 14, 0, 983058, 14, 0, 983059, 14, 0, 983060, 14, 0, 983061, 14, 0, 983062, 14, 0, 983063, 14, 0, 983064, 14, 0, 1048576, 14, 0, 1048577, 14, 0, 1048578, 14, 0, 1048579, 14, 0, 1048580, 14, 0, 1048581, 14, 0, 1048582, 14, 0, 1048583, 14, 0, 1048584, 14, 0, 1048585, 14, 0, 1048586, 14, 0, 1048587, 14, 0, 1048588, 14, 0, 1048589, 14, 0, 1048590, 14, 0, 1048591, 14, 0, 1048592, 14, 0, 1048593, 14, 0, 1048594, 14, 0, 1048595, 14, 0, 1048596, 14, 0, 1048597, 14, 0, 1048598, 14, 0, 1048599, 14, 0, 1048600, 14, 0, 1114112, 14, 0, 1114113, 14, 0, 1114114, 14, 0, 1114115, 14, 0, 1114116, 14, 0, 1114117, 14, 0, 1114118, 14, 0, 1114119, 14, 0, 1114120, 14, 0, 1114121, 14, 0, 1114122, 14, 0, 1114123, 14, 0, 1114124, 14, 0, 1114125, 14, 0, 1114126, 14, 0, 1114127, 14, 0, 1114128, 14, 0, 1114129, 14, 0, 1114130, 14, 0, 1114131, 14, 0, 1114132, 14, 0, 1114133, 14, 0, 1114134, 14, 0, 1114135, 14, 0, 1114136, 14, 0, 1179648, 14, 0, 1179649, 14, 0, 1179650, 14, 0, 1179651, 14, 0, 1179652, 14, 0, 1179653, 14, 0, 1179654, 14, 0, 1179655, 14, 0, 1179656, 14, 0, 1179657, 14, 0, 1179658, 14, 0, 1179659, 14, 0, 1179660, 14, 0, 1179661, 14, 0, 1179662, 14, 0, 1179663, 14, 0, 1179664, 14, 0, 1179665, 14, 0, 1179666, 14, 0, 1179667, 14, 0, 1179668, 14, 0, 1179669, 14, 0, 1179670, 14, 0, 1179671, 14, 0, 1179672, 14, 0, 1245184, 14, 0, 1245185, 14, 0, 1245186, 14, 0, 1245187, 14, 0, 1245188, 14, 0, 1245189, 14, 0, 1245190, 14, 0, 1245191, 14, 0, 1245192, 14, 0, 1245193, 14, 0, 1245194, 14, 0, 1245195, 14, 0, 1245196, 14, 0, 1245197, 14, 0, 1245198, 14, 0, 1245199, 14, 0, 1245200, 14, 0, 1245201, 14, 0, 1245202, 14, 0, 1245203, 14, 0, 1245204, 14, 0, 1245205, 14, 0, 1245206, 14, 0, 1245207, 14, 0, 1245208, 14, 0, 1310720, 14, 0, 1310721, 14, 0, 1310722, 14, 0, 1310723, 14, 0, 1310724, 14, 0, 1310725, 14, 0, 1310726, 14, 0, 1310727, 14, 0, 1310728, 14, 0, 1310729, 14, 0, 1310730, 14, 0, 1310731, 14, 0, 1310732, 14, 0, 1310733, 14, 0, 1310734, 14, 0, 1310735, 14, 0, 1310736, 14, 0, 1310737, 14, 0, 1310738, 14, 0, 1310739, 14, 0, 1310740, 14, 0, 1310741, 14, 0, 1310742, 14, 0, 1310743, 14, 0, 1310744, 14, 0, 1376256, 14, 0, 1376257, 14, 0, 1376258, 14, 0, 1376259, 14, 0, 1376260, 14, 0, 1376261, 14, 0, 1376262, 14, 0, 1376263, 14, 0, 1376264, 14, 0, 1376265, 14, 0, 1376266, 14, 0, 1376267, 14, 0, 1376268, 14, 0, 1376269, 14, 0, 1376270, 14, 0, 1376271, 14, 0, 1376272, 14, 0, 1376273, 14, 0, 1376274, 14, 0, 1376275, 14, 0, 1376276, 14, 0, 1376277, 14, 0, 1376278, 14, 0, 1376279, 14, 0, 1376280, 14, 0, 1441792, 14, 0, 1441793, 14, 0, 1441794, 14, 0, 1441795, 14, 0, 1441796, 14, 0, 1441797, 14, 0, 1441798, 14, 0, 1441799, 14, 0, 1441800, 14, 0, 1441801, 14, 0, 1441802, 14, 0, 1441803, 14, 0, 1441804, 14, 0, 1441805, 14, 0, 1441806, 14, 0, 1441807, 14, 0, 1441808, 14, 0, 1441809, 14, 0, 1441810, 14, 0, 1441811, 14, 0, 1441812, 14, 0, 1441813, 14, 0, 1441814, 14, 0, 1441815, 14, 0, 1441816, 14, 0, 1507328, 14, 0, 1507329, 14, 0, 1507330, 14, 0, 1507331, 14, 0, 1507332, 14, 0, 1507333, 14, 0, 1507334, 14, 0, 1507335, 14, 0, 1507336, 14, 0, 1507337, 14, 0, 1507338, 14, 0, 1507339, 14, 0, 1507340, 14, 0, 1507341, 14, 0, 1507342, 14, 0, 1507343, 14, 0, 1507344, 14, 0, 1507345, 14, 0, 1507346, 14, 0, 1507347, 14, 0, 1507348, 14, 0, 1507349, 14, 0, 1507350, 14, 0, 1507351, 14, 0, 1507352, 14, 0, 1572887, 14, 0 )
script = ExtResource( 2 )

[node name="GridSFX" parent="WallMap" instance=ExtResource( 8 )]

[node name="Robot" parent="WallMap" instance=ExtResource( 1 )]
position = Vector2( 248, 120 )
DefaultDirection = 2

[node name="EvilRobot" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 152, 136 )

[node name="EvilRobot2" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 136, 120 )
DefaultDirection = 1

[node name="EvilRobot3" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 136, 152 )
DefaultDirection = 1

[node name="EvilRobot4" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 136, 184 )
DefaultDirection = 1

[node name="EvilRobot5" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 136, 216 )
DefaultDirection = 3

[node name="EvilRobot6" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 152, 200 )

[node name="EvilRobot7" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 152, 168 )

[node name="EvilRobot8" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 72, 184 )

[node name="EvilRobot9" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 72, 152 )

[node name="EvilRobot10" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 72, 120 )
DefaultDirection = 3

[node name="EvilRobot11" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 88, 136 )
DefaultDirection = 1

[node name="EvilRobot12" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 88, 168 )
DefaultDirection = 1

[node name="EvilRobot13" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 88, 200 )
DefaultDirection = 1

[node name="EvilRobot14" parent="WallMap" instance=ExtResource( 6 )]
position = Vector2( 72, 216 )

[node name="mouse_indicator" type="Node2D" parent="WallMap"]
position = Vector2( -16, 32 )

[node name="mouse_indicator" type="PanelContainer" parent="WallMap/mouse_indicator"]
margin_right = 16.0
margin_bottom = 16.0
custom_styles/panel = SubResource( 16 )

[node name="CeilMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196626, 12, 0, 262155, 4, 0, 262156, 1, 1, 262157, 1, 1, 262158, 1, 1, 262159, 1, 1, 262160, 4, 1, 262162, 12, 0, 327683, 4, 0, 327684, 1, 1, 327685, 1, 1, 327686, 4, 1, 327687, 4, 0, 327688, 1, 1, 327689, 1, 1, 327690, 4, 1, 327691, 4, 65536, 327692, 1, 65537, 327693, 1, 65537, 327694, 1, 65537, 327695, 1, 65537, 327696, 4, 65537, 327698, 12, 0, 393219, 4, 65536, 393220, 1, 65537, 393221, 1, 65537, 393222, 4, 65537, 393223, 4, 65536, 393224, 1, 65537, 393225, 1, 65537, 393226, 4, 65537, 393227, 4, 65536, 393232, 4, 65537, 393234, 12, 0, 458755, 4, 65536, 458758, 4, 65537, 458759, 4, 65536, 458762, 4, 65537, 458763, 4, 65536, 458768, 4, 65537, 458770, 12, 0, 524291, 4, 65536, 524294, 4, 65537, 524295, 4, 65536, 524298, 4, 65537, 524299, 4, 65536, 524304, 4, 65537, 524306, 12, 0, 589825, 4, 0, 589826, 1, 1, 589827, 4, 131075, 589830, 4, 131074, 589831, 4, 131075, 589834, 4, 131074, 589835, 4, 131075, 589840, 4, 65537, 589842, 12, 0, 655361, 4, 65536, 655362, 1, 65537, 655363, 4, 196611, 655366, 4, 196610, 655367, 4, 196611, 655370, 4, 196610, 655371, 4, 196611, 655376, 4, 65537, 655378, 12, 0, 720897, 4, 65536, 720898, 1, 1, 720899, 4, 3, 720902, 4, 2, 720903, 4, 3, 720906, 4, 2, 720907, 5, 131072, 720912, 4, 65537, 720914, 12, 0, 786433, 4, 131072, 786434, 1, 65537, 786435, 4, 65539, 786438, 4, 65538, 786439, 4, 65539, 786442, 4, 65538, 786443, 5, 65536, 786448, 4, 65537, 786450, 12, 0, 851971, 4, 65536, 851972, 1, 1, 851973, 1, 1, 851974, 4, 65537, 851975, 4, 65536, 851976, 1, 1, 851977, 1, 1, 851978, 4, 65537, 851979, 4, 65536, 851980, 1, 1, 851981, 1, 1, 851982, 1, 1, 851983, 1, 1, 851984, 4, 65537, 851986, 12, 0, 917504, 12, 0, 917507, 4, 131072, 917508, 1, 65537, 917509, 1, 65537, 917510, 4, 131073, 917511, 4, 131072, 917512, 1, 65537, 917513, 1, 65537, 917514, 4, 131073, 917515, 4, 131072, 917516, 1, 65537, 917517, 1, 65537, 917518, 1, 65537, 917519, 1, 65537, 917520, 4, 131073, 983040, 12, 0, 983041, 12, 0, 983042, 12, 0 )

[node name="Place Blocks UI" parent="." instance=ExtResource( 5 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
bus = "Music"

[connection signal="level_compleated" from="WallMap" to="." method="_on_WallMap_level_compleated"]
